--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,17 @@
     <script>
         const socket = io("ws://localhost:8000");
 
+        function playSoundEffect(type){
+            const sendSound = document.getElementById("sendSoundEffect");
+            const notificationSound = document.getElementById("notificationSoundEffect");
+            if(type === "send") sendSound.play();
+            else if(type === "notification") notificationSound.play();
+        }
+
         function newMessage(message, pseudo, type) {
             //Notification Sound
             if(document.getElementById("pseudo").value != pseudo) {
-                const sound = document.getElementById("notificationSoundEffect");
-                sound.play();
+                playSoundEffect("notification");
             }
 
             const div = document.createElement("div");
@@ -34,14 +40,11 @@
         };
 
         function sendMessage() {
-            //Send Sound
-            const sound = document.getElementById("sendSoundEffect");
-            sound.play();
-
             const messageInput = document.getElementById("message");
             const pseudoInput = document.getElementById("pseudo");
             
             if(messageInput.value != "" && pseudoInput.value != "") {
+                playSoundEffect("send")
                 socket.emit("new message", {message: messageInput.value, pseudo: pseudoInput.value});
                 newMessage(messageInput.value, pseudoInput.value, "");
                 messageInput.value = "";
